--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,7 @@
 $color-orange-gradient: linear-gradient(90deg, rgba(249,178,24,1) 0%, rgba(241,91,89,1) 100%);
 $color-orange: rgb(241,91,89);
+
 $font-size-header:56px;
+$font-size-medium:22px;
+$font-size-small:18px;
+$font-size-xs:12px;
