--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -1,21 +1,64 @@
 @import "../app.scss";
 
 .navbar{
+    font-size: $font-size-small;
+    @include respond-to(medium){
+        font-size: $font-size-xs;
+    }
+    @include respond-to(xs){
+        gap: 5%;
+        font-size: 10px;
+    }
+
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 10%;
     position: relative;
-    img{
+    @include respond-to(mobiles){
+        padding-right: 10vw;
+        justify-content: space-between;
+        gap: 0 !important;
+    }
+
+    .logo{
         margin-left: 10%;
+        height: 80px;
+        width: 150px;
+        @include respond-to(medium){
+            height: 50px;
+            width: 100px;
+        }
+        @include respond-to(mobiles){
+            height: 150px;
+            width: 180px;
+        }
+    }
+    .dropDown{
+        position: absolute;
+        top: 15vh;
+        right: 10vw;
+        background-color: transparent;
+        backdrop-filter: blur(10px);
+        color: white;
+        font-size: $font-size-medium !important;
+        padding: 2rem 3rem 1rem 1rem;
+        border-radius: 1rem;
+        border-bottom: 1px solid gray;
+        .dropDownItem{
+            display: block;
+            padding-bottom: 1rem;
+        }
+        cursor: pointer;
+        z-index: 99;
     }
 
     .itemsWrapper{
         position:sticky;
         top: 10%;
         z-index: 99;
-        // background: linear-gradient(90deg, rgba(235,89,57,1) 0%, rgba(255,194,0,1) 24%, rgba(231,186,27,1) 74%, rgba(235,89,57,1) 91%);
-        background: linear-gradient(90deg, rgba(255,255,255,.7) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(255,255,255,.7) 100%);        position: relative;
+        background: linear-gradient(90deg,  rgba(225, 142, 8, 0.7)  0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(241,91,89,.7) 95%);        
+        position: relative;
         padding: 1px;
         border-radius: 1rem;
         backdrop-filter: blur(20px);
@@ -28,8 +71,12 @@
 
             height: fit-content;
             padding: .5rem 2rem;
-            gap:5rem;
+            gap:3rem;
             border-radius: 1rem;
+            @include respond-to(medium){
+                gap: 2rem;
+                padding: .5rem 1rem;
+            }
         }
     }
 }
