--- a/styles/modules/hero.module.scss
+++ b/styles/modules/hero.module.scss
@@ -6,6 +6,9 @@
     padding-left: 10%;
     padding-top: 2%;
     height: inherit;
+    @include respond-to(mobiles){
+        margin:0 1rem;
+    }
 
     .textMain{
         @extend .flexRow !optional;
@@ -20,9 +23,6 @@
         .heroLeft{
             h1{
                 font-size: $font-size-header;
-                @include respond-to(mobiles){
-                    font-size: 42px;
-                }
             }
         }
 
@@ -71,6 +71,10 @@
             border-radius: 1rem;
             width: fit-content;
         }
+        @include respond-to(mobiles){
+            padding-top: 2vh;
+            grid-template-columns: repeat(2,auto);
+        }
     }
     //end of service
 
@@ -82,18 +86,35 @@
         align-items: center;
         justify-content: space-between;
         padding-right: 10%;
+        @include respond-to(mobiles){
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            width: 100%;
+            height: 50%;
+            gap: 5vh;
+            padding: 0;
+        }
         .imageContainer{
             height: 100%;
             width: 70%;
             overflow: hidden;
             background-color: gray;
             border-radius: 1rem;
+            @include respond-to(mobiles){
+                width: 90%;
+            }
         }
         .stats{
             height: 100%;
             width: 20%;
             background: $color-orange-gradient;
             border-radius: 1rem;
+            @include respond-to(mobiles){
+                width: 50%;
+                align-self: center;
+            }
         }
     }
     
