--- a/styles/modules/hero.module.scss
+++ b/styles/modules/hero.module.scss
@@ -4,25 +4,34 @@
 .heroMain{
     // border: 1px solid red;
     padding-left: 10%;
-    padding-top: 2%;
+    padding-top: 5%;
     height: inherit;
     @include respond-to(mobiles){
         margin:0 1rem;
+        padding: 0;
+        // margin-top: 10vh;
     }
 
     .textMain{
         @extend .flexRow !optional;
         justify-content: space-between;
+        align-items: center;
         @include respond-to(mobiles){
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 2rem;
+            padding-top: 10vh;
         }
         .heroLeft{
             h1{
                 font-size: $font-size-header;
+                @include respond-to(mobiles){
+                    font-size: $font-size-header-mobile;
+                    width: 95%;
+                    text-align: center;
+                }
             }
         }
 
@@ -31,8 +40,8 @@
             padding-right: 20%;
             .bgCircle{
                 background-color: $color-orange;
-                height: 150px;
-                width: 150px;
+                height: 120px;
+                width: 120px;
                 border-radius: 50%;
                 position: relative;
                 @extend .flexCol;
@@ -47,41 +56,75 @@
                 position: absolute;
                 top: 1%;
                 left: 50%;
-                backdrop-filter: blur(20px);
+                backdrop-filter: blur(30px);
                 background-color: rgba(245, 245, 245, 0.067);
-                height: 150px;
-                width: 150px;
+                height: 120px;
+                width: 120px;
                 border-radius: 50%;
+                .svgContainer{
+                    position: absolute;
+                    top:9%;
+                    left: 9%;
+                }
+                .arrow{
+                    position: absolute;
+                    top: 20%;
+                    left: 20%;
+                }
             }
         }   
     }
     //end of textMain
 
     .serviceContainer{
+        padding-top: 5vh;
         width: fit-content;
         // border: 1px solid red;
         display: grid;
         grid-template-columns: repeat(3,auto);
         align-content: start;
         gap: .5rem .2rem;
-        p{
-            text-align: center;
-            padding:.4rem .6rem;
-            border: 1px solid rgb(159, 159, 159,.5);
-            border-radius: 1rem;
-            width: fit-content;
-        }
         @include respond-to(mobiles){
-            padding-top: 2vh;
-            grid-template-columns: repeat(2,auto);
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: .5rem;
+            flex-wrap: wrap;
+        }
+        .gradientContainer{
+            background: linear-gradient(90deg, rgba(255,255,255,0.4) 0%, rgba(0,0,0,0.4) 30%, rgba(0,0,0,0.4) 70%, rgba(255,255,255,0.4) 100%);
+            width: fit-content;
+            height: fit-content;
+            border-radius: 1rem;
+            padding: 1px;
+            p{
+                text-align: center;
+                padding:.4rem .6rem;
+                border-radius: 1rem;
+                width: fit-content;
+                background-color: black;
+            }
+            @include respond-to(mobiles){
+                grid-template-columns: repeat(2,auto);
+            }
         }
     }
     //end of service
 
+    //line
+    .gradientLine{
+        background: linear-gradient(90deg, rgba(249,178,24,1) 0%, rgba(241,91,89,0.8) 100%);
+        height: 1px;
+        width: 40vw;
+        margin-left: 25vw;
+        margin-top: 5vh;
+    }
+
     .heroImage{
         // border: 1px solid red;
         height: 40%;
-        margin-top: 5%;
+        margin-top: 3vh;
         @extend .flexRow !optional;
         align-items: center;
         justify-content: space-between;
@@ -90,9 +133,9 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
             width: 100%;
-            height: 50%;
+            height: 18rem;
             gap: 5vh;
             padding: 0;
         }
@@ -112,8 +155,8 @@
             background: $color-orange-gradient;
             border-radius: 1rem;
             @include respond-to(mobiles){
-                width: 50%;
-                align-self: center;
+                height: 60%;
+                width: 90%;
             }
         }
     }
