--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -30,8 +30,8 @@
             width: 100px;
         }
         @include respond-to(mobiles){
-            height: 150px;
-            width: 180px;
+            height: 100px;
+            width: 120px;
         }
     }
     .dropDown{
@@ -57,7 +57,7 @@
         position:sticky;
         top: 10%;
         z-index: 99;
-        background: linear-gradient(90deg,  rgba(225, 142, 8, 0.7)  0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(241,91,89,.7) 95%);        
+        background: linear-gradient(90deg, rgba(249,178,24,0.8) 0%, rgba(0,0,0,80%) 20%, rgba(255, 255, 255, 0.2) 35%, rgba(255,255,255,0.2) 65%, rgba(0,0,0,0.8) 80%, rgba(241,91,89,0.8) 100%);
         position: relative;
         padding: 1px;
         border-radius: 1rem;
