--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,7 +1,10 @@
 $color-orange-gradient: linear-gradient(90deg, rgba(249,178,24,1) 0%, rgba(241,91,89,1) 100%);
+$gradient-navbar: linear-gradient(90deg, rgba(249,178,24,0.8) 0%, rgba(0,0,0,80%) 20%, rgba(255, 255, 255, 0.2) 35%, rgba(255,255,255,0.2) 65%, rgba(0,0,0,0.8) 80%, rgba(241,91,89,0.8) 100%);
+
 $color-orange: rgb(241,91,89);
 
 $font-size-header:56px;
+$font-size-header-mobile:32px;
 $font-size-medium:22px;
 $font-size-small:18px;
 $font-size-xs:12px;
