--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -21,6 +21,9 @@
             position: absolute;
             left: 10%;
             top: 2rem;
+            @include respond-to(mobiles){
+                left: 1%;
+            }
         }
         
         svg{
@@ -28,6 +31,11 @@
             position: absolute;
             right: 10%;
             top: 2rem;
+            @include respond-to(mobiles){
+                height: 18px;
+                width: 18px;
+                right: 2%;
+            }
         }
         h2{
             @include respond-to(mobiles){
