--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -14,7 +14,7 @@
         background-color: black;
         color: white;
         margin-top: 3rem;
-        padding:2rem 0;
+        padding:2rem 0.3rem;
         position: relative;
 
         .num{
