--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -4,6 +4,7 @@
 .main{
     background-color: white;
     color: black;
+    padding-bottom: 10vh;
     h1{
         @extend .textOrange !optional;
     }
