--- a/styles/modules/Button.module.scss
+++ b/styles/modules/Button.module.scss
@@ -5,7 +5,7 @@
 .btnMain {
     position: relative; 
     width: fit-content;
-
+    height: fit-content;
     button {
         background: $color-orange-gradient;
         border-radius: 2rem;
