--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,6 +3,7 @@ $gradient-navbar: linear-gradient(90deg, rgba(249,178,24,0.8) 0%, rgba(0,0,0,80%
 
 $color-orange: rgb(241,91,89);
 $color-gray: rgb(29,29,29);
+$color-light-gray:rgb(237,237,237);
 
 $font-size-header:56px;
 $font-size-header-mobile:32px;
