--- a/styles/app.scss
+++ b/styles/app.scss
@@ -43,9 +43,9 @@
     .line{
         background: $color-orange-gradient;
         height: 2px;
-        width:50px;
+        width:30px;
     }
     .lineTag{
-        font-size: $font-size-medium;
+        font-size: 16px;
     }
 }
