--- a/styles/modules/contact.module.scss
+++ b/styles/modules/contact.module.scss
@@ -13,7 +13,8 @@
     .contactFlex{
         padding-top: 5vh;
         @extend .flexRow !optional;
-        // border: 1px solid red;
+        align-items: flex-start;
+        justify-content: space-between;
         .flexLeft{
             width: 60%;
             // border: 1px solid green;
@@ -28,6 +29,7 @@
                     padding-bottom: 2rem;
                 }
                 input,textArea{
+                    width: 95%;
                     background-color: $color-gray;
                     border-radius: .5rem;
                     padding: 1rem;
@@ -46,9 +48,20 @@
         }
         .flexRight{
             // border: 1px solid blue;
-            background-color: $color-orange-gradient;
+            background: $color-orange-gradient;
             border-radius: 1rem;
-            height: 100%;
+            width: 20vw;
+            padding:1rem 2rem;
+            min-height: 100%;
+            margin-right: 3rem;
+            h2{
+                font-size: 36px;
+                color: black;
+            }
+            p{
+                font-size: $font-size-small;
+                padding: 1rem 0;
+            }
         }
     }
 }
