--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -12,12 +12,22 @@
         width: 100%;
         border-radius: 1rem;
         height: fit-content;
-        background-color: black;
-        color: white;
+        background-color: $color-light-gray;
+        color: black;
         margin-top: 3rem;
         padding:2rem 0.3rem;
         position: relative;
-
+        transition: all .5s ease-in-out;
+        &:hover{
+            background-color: black;
+            color: white;
+            .tag{
+                color: black;
+            }
+            svg{
+                fill: white;
+            }
+        }
         .num{
             position: absolute;
             left: 10%;
@@ -58,8 +68,7 @@
                 }
                 gap: .5rem;
                 .tag{
-                    background:$color-orange-gradient;
-                    color: white;
+                    background:white;
                     border-radius: 1rem;
                     padding: .5rem 1rem;
                     @include respond-to(mobiles){
