--- a/styles/app.scss
+++ b/styles/app.scss
@@ -34,6 +34,9 @@
     @include respond-to(mobiles){
         padding: 10vh 1rem 0 1rem;
     }
+    @include respond-to(medium){
+        padding: 10vh 2rem 2rem;
+    }
 }
 .lineContent{
     display: flex;
