--- a/styles/modules/contact.module.scss
+++ b/styles/modules/contact.module.scss
@@ -1,5 +1,6 @@
 @import "../app.scss";
 @import "../variables.scss";
+@import "../mixins.scss";
 
 .main{
     background-color: black;
@@ -13,10 +14,21 @@
     .contactFlex{
         padding-top: 5vh;
         @extend .flexRow !optional;
+        gap: 2rem;
         align-items: flex-start;
         justify-content: space-between;
+        @include respond-to(medium){
+            display: flex;
+            flex-direction: column;  
+            gap: 1rem;  
+        }
+
         .flexLeft{
             width: 60%;
+            @include respond-to(medium){
+                width: 100%;
+                margin: 0 .5rem;
+            }
             // border: 1px solid green;
             .contactForm{
                 .flexRow{
@@ -36,12 +48,22 @@
                     border: none;
                     color: white !important;
                     font-weight: bold;
+                    @include respond-to(medium){
+                        width: 90%;
+                    }   
                     &:focus{
                         outline: none;
                         border: none;
                     }
                     &::placeholder{
                         color:white;
+                    }
+                }
+                .btnContainer{
+                    @include respond-to(medium){
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
                     }
                 }
             }
@@ -54,8 +76,11 @@
             padding:1rem 2rem;
             min-height: 100%;
             margin-right: 3rem;
+            @include respond-to(medium){
+                width: 85%;
+            }
             h2{
-                font-size: 36px;
+                font-size: 30px;
                 color: black;
             }
             p{
