--- a/styles/modules/social.module.scss
+++ b/styles/modules/social.module.scss
@@ -8,8 +8,11 @@
     background-color: transparent;
     .svgContainer{
         background-color: black;
-        width: fit-content;
-        padding: .5rem;
-        border-radius: 50%;
+        height: 40px;
+        width: 40px;
+        @extend .flexCol !optional;
+        align-items: center;
+        justify-content: center;
+        border-radius: 20px;
     }
 }
