--- a/styles/app.scss
+++ b/styles/app.scss
@@ -52,3 +52,10 @@
         font-size: 16px;
     }
 }
+.imgContainer{
+    overflow: hidden;
+    img{
+        height: 100%;
+        width: 100%;
+    }
+}
