--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,42 @@
+@font-face {
+  font-family: 'Bold';
+  src: url('../../public/Proza_Libre/ProzaLibre-Bold.ttf') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Semi-Bold';
+  src: url('../../public/Proza_Libre/ProzaLibre-SemiBold.ttf') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Regular';
+  src: url('../../public/Proza_Libre/ProzaLibre-Regular.ttf') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Medium';
+  src: url('../../public/Proza_Libre/ProzaLibre-Medium.ttf') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
 html,body{
   background-color: black;
   color:white;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Regular";
+}
+h1,h2{
+  font-family: "Semi-Bold";
 }
 p,h1,h2{
   padding: 0;
