--- a/styles/app.scss
+++ b/styles/app.scss
@@ -25,7 +25,7 @@
     font-size: $font-size-header;
     padding-top: 2rem;
     font-weight: bold;
-    @include respond-to(mobiles){
+    @include respond-to(medium){
         font-size: $font-size-header-mobile;
     }
 }
@@ -57,5 +57,20 @@
     img{
         height: 100%;
         width: 100%;
+    }
+}
+.headingContainer{
+    @extend .flexRow !optional;
+    justify-content: space-between;
+    .btnContainer{
+        align-self: flex-end;
+        @include respond-to(mobiles){
+            align-self: flex-end;
+        }
+    }
+    @include respond-to(mobiles){
+        display: flex;
+        flex-direction: column;
+        gap:1rem;
     }
 }
