--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -24,30 +24,16 @@
             .tag{
                 color: black;
             }
-            svg{
-                fill: white;
-            }
         }
         .num{
             position: absolute;
             left: 10%;
             top: 2rem;
             @include respond-to(mobiles){
-                left: 1%;
+                left: 5%;
             }
         }
-        
-        svg{
-            cursor: pointer;
-            position: absolute;
-            right: 10%;
-            top: 2rem;
-            @include respond-to(mobiles){
-                height: 18px;
-                width: 18px;
-                right: 2%;
-            }
-        }
+    
         h2{
             @include respond-to(mobiles){
                 font-size: $font-size-small;
@@ -57,6 +43,7 @@
             margin-left: 20%;
             width: 50vw;
             @extend .flexCol !optional;
+            justify-content: center;
             gap: 1rem;
 
             .tagContainer{
@@ -84,12 +71,16 @@
                 background-color: gray;
             }
         }
-    }
-    .rotate {
-        transition: transform 0.3s ease;
-      }
-      
-    .rotated {
-        transform: rotate(180deg);
+        .btnContainer{
+            position: absolute;
+            top: 10%;
+            right: 5%;
+            @include respond-to(mobiles){
+                position: relative;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+            }
+        }
     }
 }
