--- a/styles/modules/Footer.module.scss
+++ b/styles/modules/Footer.module.scss
@@ -9,6 +9,13 @@
         justify-content: space-between;
         align-items: center;
         font-size: 32px;
+        @include respond-to(mobiles){
+            font-size: 32px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 1rem;
+        }
     }
     .info{
         margin-top: 10vh;
@@ -16,9 +23,16 @@
         border-top: 1px solid gray;
         border-bottom: 1px solid gray;
         @extend .flexRow !optional;
+        @include respond-to(mobiles){
+            display: flex;
+            flex-direction: column;
+        }
         gap:5rem;
         .infoDiv1{
             width: 40%;
+            @include respond-to(mobiles){
+                width: 90%;
+            }
             .name{
                 @extend .flexRow !optional;
                 width: fit-content;
@@ -77,5 +91,8 @@
         gap:20%;
         padding: 2rem 0;
         color:gray;
+        @include respond-to(mobiles){
+            font-size: 12px;
+        }
     }
 }
