--- a/styles/modules/Button.module.scss
+++ b/styles/modules/Button.module.scss
@@ -7,6 +7,7 @@
     width: fit-content;
     height: fit-content;
     @extend .flexRow !optional;
+    justify-content: center;
 
     button {
         background: $color-orange-gradient;
@@ -16,9 +17,15 @@
         color: white;
         z-index: 2; 
         @include respond-to(mobiles){
-          padding: .4rem 2rem;
+          width: 200px;
           border-radius: 1.5rem;
         }
+        transition: all 0.5s ease;
+        &:hover{
+          box-shadow: 
+          -5px 2px 10px rgba(168, 130, 48, 0.5),  /* Left bottom shadow */
+          10px 2px 10px rgba(241,91,89,.5);   /* Right bottom shadow */
+              }
     }
 
     .arrowContainer {
