--- a/styles/modules/Footer.module.scss
+++ b/styles/modules/Footer.module.scss
@@ -9,7 +9,7 @@
         justify-content: space-between;
         align-items: center;
         font-size: 32px;
-        @include respond-to(mobiles){
+        @include respond-to(medium){
             font-size: 32px;
             display: flex;
             flex-direction: column;
@@ -23,14 +23,14 @@
         border-top: 1px solid gray;
         border-bottom: 1px solid gray;
         @extend .flexRow !optional;
-        @include respond-to(mobiles){
+        @include respond-to(medium){
             display: flex;
             flex-direction: column;
         }
         gap:5rem;
         .infoDiv1{
             width: 40%;
-            @include respond-to(mobiles){
+            @include respond-to(medium){
                 width: 90%;
             }
             .name{
@@ -91,7 +91,7 @@
         gap:20%;
         padding: 2rem 0;
         color:gray;
-        @include respond-to(mobiles){
+        @include respond-to(medium){
             font-size: 12px;
         }
     }
