--- a/styles/modules/hero.module.scss
+++ b/styles/modules/hero.module.scss
@@ -82,20 +82,18 @@
         width: fit-content;
         // border: 1px solid red;
         display: grid;
-        grid-template-columns: repeat(3,auto);
+        grid-template-columns: repeat(6,10vh);
         align-content: start;
-        gap: .5rem .2rem;
+        gap: 1rem .2rem;
         @include respond-to(mobiles){
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: .5rem;
-            flex-wrap: wrap;
+            display: grid;
+            align-content: center;
+            grid-template-columns: repeat(5,15vw); 
+            row-gap: 5px;
         }
         .gradientContainer{
             background: linear-gradient(90deg, rgba(255,255,255,0.4) 0%, rgba(0,0,0,0.4) 30%, rgba(0,0,0,0.4) 70%, rgba(255,255,255,0.4) 100%);
-            width: fit-content;
+            width: 100%;
             height: fit-content;
             border-radius: 1rem;
             padding: 1px;
@@ -103,11 +101,45 @@
                 text-align: center;
                 padding:.4rem .6rem;
                 border-radius: 1rem;
-                width: fit-content;
+                // width: fit-content;
                 background-color: black;
             }
+            &:nth-child(1){
+                grid-column: 1/4;
+            }
+            &:nth-child(2){
+                grid-column: 4/6;
+            }
+            &:nth-child(3){
+                grid-column: 6/8;
+            }
+            &:nth-child(4){
+                grid-column: 1/4;
+            }
+            &:nth-child(5){
+                grid-column: 4/6;
+            }
+            &:nth-child(6){
+                grid-column: 6/8;
+            }
             @include respond-to(mobiles){
-                grid-template-columns: repeat(2,auto);
+                font-size: clamp(12px, 15px, 13px);
+                &:nth-child(1){
+                    grid-column: 1/4;
+                }
+                &:nth-child(2){
+                    grid-column: 4/6;
+                }
+                &:nth-child(4){
+                    grid-column: 1/4;
+                }
+                &:nth-child(5){
+                    grid-column: 4/6;
+                }
+                &:nth-child(3),
+                &:nth-child(6) {
+                grid-column: 2/5;
+                }
             }
         }
     }
@@ -124,7 +156,8 @@
 
     .heroImage{
         // border: 1px solid red;
-        height: 40%;
+        height: 40vh;
+        padding-bottom: 1rem;
         margin-top: 3vh;
         @extend .flexRow !optional;
         align-items: center;
