--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -77,6 +77,10 @@
                 gap: 2rem;
                 padding: .5rem 1rem;
             }
+            .link{
+                text-decoration: none;
+                color: white;
+            }
         }
     }
 }
