--- a/styles/modules/hero.module.scss
+++ b/styles/modules/hero.module.scss
@@ -5,6 +5,7 @@
     // border: 1px solid red;
     padding-left: 10vw;
     padding-top: 5vh;
+    padding: 5vh 8rem 0 8rem;
     height: inherit;
     @include respond-to(mobiles){
         margin:0 1rem;
@@ -38,7 +39,7 @@
 
 
         .heroRight{
-            padding-right: 20%;
+            // padding-right: 20%;
             .bgCircle{
                 background-color: $color-orange;
                 height: 120px;
@@ -162,8 +163,9 @@
         margin-top: 3vh;
         @extend .flexRow !optional;
         align-items: center;
-        justify-content: space-between;
-        padding-right: 10%;
+        justify-content: center;
+        gap: 5vw;
+        // padding-right: 10%;
         @include respond-to(mobiles){
             display: flex;
             flex-direction: column;
@@ -182,10 +184,7 @@
             background-color: gray;
             border-radius: 1rem;
             img{
-                position: absolute;
-                top: -25%;
-                width: 970px;
-                height: 570px;
+                object-fit: cover;                
             }
             @include respond-to(mobiles){
                 width: 100%;
@@ -193,7 +192,7 @@
         }
         .stats{
             height: 100%;
-            width: 20%;
+            width: 30%;
             background: $color-orange-gradient;
             border-radius: 1rem;
             @include respond-to(mobiles){
