--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -63,7 +63,7 @@
         z-index: 98; // Below the navbar
         background: linear-gradient(90deg, rgba(249,178,24,0.8) 0%, rgba(0,0,0,80%) 20%, rgba(255, 255, 255, 0.2) 35%, rgba(255,255,255,0.2) 65%, rgba(0,0,0,0.8) 80%, rgba(241,91,89,0.8) 100%);
         padding: 1px;
-        border-radius: 1rem;
+        border-radius: 3rem;
         .items {
             @extend .flexRow !optional;
             align-items: center;
@@ -72,7 +72,7 @@
             height: fit-content;
             padding: .5rem 2rem;
             gap: 3rem;
-            border-radius: 1rem;
+            border-radius: inherit;
             @include respond-to(medium) {
                 gap: 2rem;
                 padding: .5rem 1rem;
