--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -15,7 +15,7 @@
         background-color: $color-light-gray;
         color: black;
         margin-top: 3rem;
-        padding:2rem 0.3rem;
+        padding:2rem 0.3rem 0 0.3rem;
         position: relative;
         transition: all .5s ease-in-out;
         &:hover{
@@ -49,6 +49,7 @@
             .tagContainer{
                 @extend .flexRow !optional;
                 width: fit-content;
+                padding-bottom: 1rem;
                 @include respond-to(mobiles){
                     display: flex;
                     flex-direction: column;
