--- a/styles/modules/hero.module.scss
+++ b/styles/modules/hero.module.scss
@@ -39,7 +39,7 @@
 
 
         .heroRight{
-            // padding-right: 20%;
+            padding-right: 10vw;
             .bgCircle{
                 background-color: $color-orange;
                 height: 120px;
