--- a/styles/app.scss
+++ b/styles/app.scss
@@ -71,3 +71,12 @@
         gap:1rem;
     }
 }
+.heading{
+    @extend .flexCol !optional;
+    align-items: center;
+    justify-content: center;
+    h1{
+        font-size: $font-size-header-mobile;
+    }
+    padding: 2vh 0;
+}
