--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -48,6 +48,8 @@
         border-bottom: 1px solid gray;
 
         .dropDownItem {
+            text-decoration: none;
+            color: white;
             display: block;
             padding-bottom: 1rem;
         }
