--- a/styles/app.scss
+++ b/styles/app.scss
@@ -80,3 +80,21 @@
     }
     padding: 2vh 0;
 }
+.OrangeBtn{
+    background: $color-orange-gradient;
+    border-radius: 2rem;
+    padding: .7rem 2rem;
+    border: none;
+    color: white;
+    z-index: 2; 
+    @include respond-to(mobiles){
+      width: 200px;
+      border-radius: 1.5rem;
+    }
+    transition: all 0.5s ease;
+    &:hover{
+      box-shadow: 
+      -5px 2px 10px rgba(168, 130, 48, 0.5),  /* Left bottom shadow */
+      10px 2px 10px rgba(241,91,89,.5);   /* Right bottom shadow */
+    }
+}
