--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -48,6 +48,8 @@
         border-bottom: 1px solid gray;
 
         .dropDownItem {
+            top: 0;
+            right: 0;
             text-decoration: none;
             color: white;
             display: block;
@@ -59,7 +61,7 @@
 
     .itemsWrapper {
         cursor: pointer;
-        position:fixed;
+        position:fixed; 
         top: 3%;
         left: 30%; // Sticks to the very top of the viewport
         z-index: 98; // Below the navbar
@@ -83,6 +85,41 @@
                 text-decoration: none;
                 color: white;
             }
+        }
+    }
+}
+
+.glassEffect {
+    background:transparent !important;
+    backdrop-filter: blur(10px) !important;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1) !important;
+    .items{
+        background: transparent !important;
+        .link{
+            @extend .textOrange !optional;
+        }
+    }
+}
+  
+.svgWrapper{
+    position: fixed;
+    top: 5%;
+    right: 10%;
+    z-index: 99;
+}
+.btnContainer{
+    position: fixed;
+    top: 5%;
+    left: 5%;
+    z-index: 99;
+    button{
+        @extend .OrangeBtn !optional;
+        @include respond-to(mobiles){
+            width: fit-content !important;
+            padding: .5rem 2rem !important;
+            box-shadow: 
+      -5px 2px 10px rgba(168, 130, 48, 0.5),  /* Left bottom shadow */
+      10px 2px 10px rgba(241,91,89,.5);   /* Right bottom shadow */
         }
     }
 }
