--- a/styles/modules/testimonials.module.scss
+++ b/styles/modules/testimonials.module.scss
@@ -30,6 +30,7 @@
             background-color: white;
             position: absolute;
             padding:2px;
+            cursor: pointer;
             div{
                 transform: rotate(223deg);
                 position: absolute;
