--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -101,24 +101,25 @@
     }
 }
   
-.svgWrapper{
-    position: fixed;
-    top: 5%;
-    right: 10%;
-    z-index: 99;
-}
+
 .btnContainer{
+    background: transparent;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1) !important;
     position: fixed;
-    top: 5%;
-    left: 5%;
+    width: 100%;
+    top: 0%;
+    padding: 1rem 0 .5rem 0;
     z-index: 99;
+    @extend .flexRow !optional;
+    justify-content: center;
     button{
         @extend .OrangeBtn !optional;
         @include respond-to(mobiles){
             width: fit-content !important;
             padding: .5rem 2rem !important;
             box-shadow: 
-      -5px 2px 10px rgba(168, 130, 48, 0.5),  /* Left bottom shadow */
+      -5px 2px 10px rgba(168, 130, 48, .5),  /* Left bottom shadow */
       10px 2px 10px rgba(241,91,89,.5);   /* Right bottom shadow */
         }
     }
