--- a/styles/modules/testimonials.module.scss
+++ b/styles/modules/testimonials.module.scss
@@ -129,6 +129,8 @@
                     padding:0 1rem;
                     font-size: 32px;
                     svg{
+                        height: 20px;
+                        width: 20px;
                     @include respond-to(mobiles){
                         height: 20px;
                         width: 20px;
@@ -170,4 +172,7 @@ animation: fadein .5s ease-in forwards;
         transform: scale(0.5);
         opacity: 0;
     }
+}
+.content2{
+    padding-top: 10vh;
 }
