--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,7 @@ html,body{
   padding: 0;
   box-sizing: border-box;
   font-family: "Regular";
+  overflow-x: hidden;
 }
 h1,h2{
   font-family: "Semi-Bold";
@@ -41,4 +42,13 @@ h1,h2{
 p,h1,h2,h3{
   padding: 0;
   margin: 0;
+}
+#img-3{
+    object-position: center 70% !important;
+}
+#img-4{
+    object-position: center 30% !important;
+}
+#img-5{
+    object-position: center 50% !important;
 }
