--- a/styles/modules/serviceDetails.module.scss
+++ b/styles/modules/serviceDetails.module.scss
@@ -57,6 +57,7 @@
                 width: 2.5vw;
                 text-align: center;
                 border-radius: 50%;
+                margin-left: 1.5rem;
                 background-color: $color-orange;
                 @extend .flexCol !optional;
                 align-items: center;
