--- a/styles/modules/Button.module.scss
+++ b/styles/modules/Button.module.scss
@@ -8,6 +8,7 @@
     height: fit-content;
     @extend .flexRow !optional;
     justify-content: center;
+    cursor: pointer;
 
     button {
        @extend .OrangeBtn !optional;
