--- a/styles/modules/Button.module.scss
+++ b/styles/modules/Button.module.scss
@@ -12,7 +12,22 @@
 
     button {
        @extend .OrangeBtn !optional;
+      //  &:hover{
+      //     transform: translateX(-50px);
+      //  }
     }
+    .add{
+      animation: reveal 1s ease forwards;
+      visibility: visible;
+     }
+     @keyframes reveal {
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-50px);
+      }
+  }
 
     .arrowContainer {
         background-color: white;
@@ -22,27 +37,12 @@
         align-items: center;
         justify-content: center;
         transition: none;
-        visibility: hidden;
-        z-index: -1;
+        // visibility: hidden;
+        // z-index: -1;
+        transform: translateX(-80px);
         @include respond-to(mobiles){
           border-radius: 1.5rem;
           padding-left: 2.5rem;
-        }
-    }
-       .add{
-        animation: reveal 1s ease forwards;
-        visibility: visible;
-       }
-       @keyframes reveal {
-        0% {
-          transform: translateX(-100px);
-          opacity: 0;
-        }
-        100% {
-          transform: translateX(-45%);
-          opacity: 1;
-          z-index: 1;
-          visibility: visible;
         }
     }
 }
