--- a/styles/modules/serviceDetails.module.scss
+++ b/styles/modules/serviceDetails.module.scss
@@ -76,8 +76,9 @@
                 justify-content: center;
                 color: black;
                 @include respond-to(mobiles){
-                    height:6vh;
-                    width: 9vw;
+                    height:50px;
+                    width: 50px;
+                    margin:0;
                 }
             }
             .details{
