--- a/styles/modules/Button.module.scss
+++ b/styles/modules/Button.module.scss
@@ -40,10 +40,10 @@
         // visibility: hidden;
         // z-index: -1;
         // transform: translateX(-80px);
+        position: absolute;
+        right: 5%;
+        top: 5%;
         @include respond-to(mobiles){
-          position: absolute;
-          right: 0;
-          top: 5%;
           border-radius: 1.5rem;
           padding-left: 2.5rem;
         }
