--- a/styles/modules/services.module.scss
+++ b/styles/modules/services.module.scss
@@ -9,7 +9,7 @@
     .mainDiv{
         width: 100%;
         border-radius: 1rem;
-        height: fit-content;
+        min-height: 10vh;
         background-color: $color-light-gray;
         color: black;
         margin-top: 3rem;
@@ -94,5 +94,29 @@
                 justify-content: center;
             }
         }
+    }
+}
+.openingDiv{
+    animation: open 1.5s ease-in-out;
+}
+.down{
+    animation: down 1s ease-in-out;
+}
+@keyframes down {
+    0%{
+        transform: translateY(0);
+        height: 30vh;
+    }
+    100%{
+        transform: translateY(10px);
+        height: 45vh;
+    }
+}
+@keyframes open {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
     }
 }
