--- a/styles/modules/slider.module.scss
+++ b/styles/modules/slider.module.scss
@@ -18,22 +18,13 @@
   .slidesTrack {
     display: flex;
     gap: 2rem;
-    animation: scroll 30s linear infinite; 
-    width: max-content;
+    justify-content: space-evenly;
   }
 
   .flexRow {
     display: flex;
     align-items: center;
     gap: 2rem;
-  }
-}
-
-@keyframes scroll {
-  from {
-    transform: translateX(0);
-  }
-  to{
-    transform: translateX(-100%);
+    cursor: pointer;
   }
 }
