--- a/styles/modules/slider.module.scss
+++ b/styles/modules/slider.module.scss
@@ -9,16 +9,18 @@
   background: $color-orange-gradient;
   padding: 1rem;
   @include respond-to(mobiles){
-    width: 95%;
-  }
-  @include respond-to(xs){
-    width: 90%;
+    font-size: 12px;
+    width: 100%;
   }
 
   .slidesTrack {
     display: flex;
     gap: 2rem;
     justify-content: space-evenly;
+    align-items: center;
+    @include respond-to(mobiles){
+      gap: 10px;
+    }
   }
 
   .flexRow {
@@ -26,5 +28,17 @@
     align-items: center;
     gap: 2rem;
     cursor: pointer;
+    p {
+      white-space: nowrap;   // Prevent text from wrapping
+      overflow: hidden;      // Hide overflow (optional, you can use `auto` or `scroll`)
+      text-overflow: ellipsis; // Adds "..." when text overflows
+    }
+
+    @include respond-to(mobiles) {
+      p {
+        white-space: nowrap; // Ensure text doesn't wrap on mobile
+        overflow: hidden;   // Let the text overflow without wrapping
+      }
+    }
   }
 }
